# TradingSim

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cpp-tests.yml
data/: nasdaq_sample.csv  sample_data.csv
docs/English/: internals.md  overview.md
docs/Francais/: apercu.md  technique.md
engine/: latency.hpp  matching_engine.cpp  matching_engine.hpp  memory_pool.hpp  metrics.cpp  metrics.hpp  order_types.hpp  price_ladder.cpp  price_ladder.hpp  simulation.cpp  simulation.hpp  spsc_queue.hpp  trade_store.cpp  trade_store.hpp
tests/: test_matching_engine.cpp  test_memory_pool.cpp  test_metrics.cpp  test_performance.cpp  test_price_ladder.cpp  test_spsc_queue.cpp  test_trade_store.cpp
tools/: itch_to_csv.py
